Fix clipped line numbers
Also increase minimum width to 3 digits.

--- a/public/stylesheets/editor.less
+++ b/public/stylesheets/editor.less
@@ -154,7 +154,7 @@
         }
     }
     
-    .status-item, .ace_gutter
+    .status-item, #gutter-extension
     {
         float: left;
         position: static;
@@ -301,16 +301,16 @@
    margin-right: -2px;
 }
 
-.ace_gutter
+.ace_gutter, #gutter-extension
 {
-    width: 49px !important;
+    min-width: 57px !important;
     background-color: white !important;
     border-right: 1px #eee solid;
 }
 
 .ace_gutter-layer
 {
-    width: 49px !important;
+    min-width: 57px !important;
 }
 
 .ace-tm .ace_gutter-active-line,
